--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           <h3>Ultimos Trabajos</h3>
         </div>
         <div>
-            <img src="portada1.jpg" width="200" height="220">
-            <img src="portada2.jpg" width="200" height="200">
-            <img src="portada3.jpg" width="200" height="260">
+            <img src="portada1.jpg" alt="portada1" width="200" height="220">
+            <img src="portada2.jpg" alt="portada2" width="200" height="200">
+            <img src="portada3.jpg" alt="portada3" width="200" height="260">
         </div>
     </section>
     <section id="contacto">
