--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </ul>
         </nav>
         <div id="portada">
-            <img src="avatar.jpg" width="200" height="220">
+            <img src="./img 13-22-49-248/avatar.jpg" width="200" height="220">
             <h2>Alexandro Richard</h2>
             <h3>Frontend Developer</h3>
         </div>
@@ -30,9 +30,9 @@
           <h3>Ultimos Trabajos</h3>
         </div>
         <div>
-            <img src="portada1.jpg" alt="portada1" width="200" height="220">
-            <img src="portada2.jpg" alt="portada2" width="200" height="200">
-            <img src="portada3.jpg" alt="portada3" width="200" height="260">
+            <img src="./img 13-22-49-248/portada1.jpg" alt="portada1" width="200" height="220">
+            <img src="./img 13-22-49-248/portada2.jpg" alt="portada2" width="200" height="200">
+            <img src="./img 13-22-49-248/portada3.jpg" alt="portada3" width="200" height="260">
         </div>
     </section>
     <section id="contacto">
