--- a/index.html
+++ b/index.html
@@ -31,14 +31,23 @@
         </div>
         <div>
             <img src="./img 13-22-49-248/portada1.jpg" alt="portada1" width="200" height="220">
-            <img src="./img 13-22-49-248/portada2.jpg" alt="portada2" width="200" height="200">
-            <img src="./img 13-22-49-248/portada3.jpg" alt="portada3" width="200" height="260">
+            <img src="./img 13-22-49-248/portada2.jpg" alt="portada2" width="200" height="220">
+            <img src="./img 13-22-49-248/portada3.jpg" alt="portada3" width="180" height="220">
         </div>
     </section>
     <section id="contacto">
         <h2>Contacto</h2>
         <h3>Escribeme, Trabajemos Juntos.</h3>
-    </section>
+        <form>
+            <label for="fname">Nombre:</label>
+            <input type="text" id="fname" name="fname" placeholder="nombre">
+            <label for="email">Correo Electronico:</label>
+            <input type="email" id="email" name="email" placeholder="ejemplo@tuemail.com"><br>
+            <label for="asunto">Asunto:</label><br>
+            <textarea name="asunto" id="asunto" cols="60" rows="1" placeholder="asunto"></textarea><br>
+            <input type="submit" value="Enviar"><br>
+        </form>    
+    </section><br><br>
     <footer>
         <p>©Copyright 2020 "Alexandro Richard". Todos los derechos reservados.</p>
     </footer>
